--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -28,3 +28,32 @@ footer{
     margin-top: 50px;
     text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child){
+        display: none;
+    }
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .topnav.responsive{float: none;}
+    .topnav.responsive{position: relative;}
+    .topnav.responsive{
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+}
