--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Header</title>
+    <link rel="script" th:href="@{/script/script.js}" href="../../static/scripts/script.js">
 </head>
 <body>
 <header th:fragment="header">
     <h1>NetMeet</h1>
-    <nav class="topnav">
+    <nav class="topnav" id="myTopnav">
         <a th:href="@{/}">Home</a>
         <a th:href="@{/netwerkevents}">Netwerkevents</a>
         <a th:href="@{/organisators}">Organisators</a>
         <a th:href="@{/overOns}">Over ons</a>
         <a th:href="@{/account}">Account</a>
+        <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
 </header>
 </body>
