add html pages 2.0

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,8 +9,8 @@
     <h1>NetMeet</h1>
     <nav class="topnav" id="myTopnav">
         <a th:href="@{/}">Home</a>
-        <a th:href="@{/netwerkevents}">Netwerkevents</a>
-        <a th:href="@{/organisators}">Organisators</a>
+        <a th:href="@{/netwerkeventsList}">Netwerkevents</a>
+        <a th:href="@{/organisatorsList}">Organisators</a>
         <a th:href="@{/overOns}">Over ons</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
     </nav>
