--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -57,3 +57,42 @@ footer{
         text-align: left;
     }
 }
+
+
+/*cards*/
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 370px;
+    height: 450px;
+    margin: 25px 25px 25px 25px;
+    background-color: #f2f2f2;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    margin: 0 10px;
+    border-top: 1px solid black;
+    padding-bottom: 10px;
+}
+
+.card img{
+    width: 100%;
+}
+
+.project-cards{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.sizeBoxPhotoProject{
+    width: 350px;
+    height: 220px;
+    padding-top: 10px;
+    padding-left: 10px;
+}
