--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <footer th:fragment="footer">
-    <p>&copy; Copyright NetMeet - Created by <a href="https://www.brentvanhese.be">Brent Van Hese</a></p>
+    <p>&copy; Copyright NetMeet - Created by <a href="https://www.brentvanhese.be" target="_blank">Brent Van Hese</a></p>
 </footer>
 </body>
 </html>
