--- a/src/main/resources/templates/netwerkeventsList.html
+++ b/src/main/resources/templates/netwerkeventsList.html
@@ -19,7 +19,7 @@
         <div th:each="netwerkevent: ${netwerkevents}">
             <div class="card">
                 <h4><b th:text="${netwerkevent.naamNetwerkEvent}"></b></h4>
-                <p th:text="${'Info ' + netwerkevent.info}"></p>
+                <p th:text="${'Info: ' + netwerkevent.info}"></p>
                 <p th:text="${'Provincie: ' + netwerkevent.provincie}"></p>
                 <div class="container">
                     <a th:href="@{|/netwerkeventdetails/${netwerkevent.id}}">Meer info</a>
