--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,17 +59,23 @@ footer{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     width: 370px;
-    height: 450px;
+    height: 225px;
     margin: 25px 25px 25px 25px;
     background-color: #f2f2f2;
+    border-radius: 5px;
+    padding-top: 1px;
 }
 
 .card > h4{
     text-align: center;
 }
 
+.card > p{
+    margin-left: 10px;
+}
+
 .card-organisator{
-    height: 100px;
+    height: 125px;
 }
 
 .card:hover {
@@ -78,7 +84,7 @@ footer{
 
 .container {
     margin: 0 10px;
-    border-top: 1px solid black;
+    border-top: 1px solid #29434e;
     padding-bottom: 10px;
 }
 
@@ -98,6 +104,24 @@ footer{
     height: 220px;
     padding-top: 10px;
     padding-left: 10px;
+}
+
+.moreInfoButton{
+    text-align: center;
+}
+
+.moreInfoButton a{
+    background-color: #29434e;
+    color: white;
+    padding: 5px 15px;
+    margin: 10px auto;
+    text-align: center;
+    display:inline-block;
+    border-radius: 25px;
+}
+
+.moreInfoButton a:hover{
+    background-color: #819ca9;
 }
 
 /*slide show*/
