--- a/src/main/resources/templates/netwerkeventdetails.html
+++ b/src/main/resources/templates/netwerkeventdetails.html
@@ -28,7 +28,7 @@
         </tr>
         <tr>
             <td><p>Maximum aantal aanwezigen? :</p></td>
-            <td><p th:text="${netwerkevent.maxAanwezigen}">0</p></td>
+            <td><p th:text="${netwerkevent.locatie.maxAanwezigen}">0</p></td>
         </tr>
         <tr>
             <td><p>Provincie :</p></td>
