--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -12,6 +12,7 @@
     <nav class="topnav" id="myTopnav">
         <a th:href="@{/}">Home</a>
         <a th:href="@{/netwerkeventsList}">Netwerkevents</a>
+        <a th:href="@{/locatie-list}">Locaties</a>
         <a th:href="@{/organisatorsList}">Organisators</a>
         <a th:href="@{/overOns}">Over ons</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
