--- a/src/main/resources/templates/locatie-details.html
+++ b/src/main/resources/templates/locatie-details.html
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <td><p>Max aantal aanwezigen :</p></td>
-            <td><a th:text="${locatie.maxAanwezigen}" >0</a></tr>
+            <td><p th:text="${locatie.maxAanwezigen}" >0</p></tr>
     </table>
 </main>
 
