--- a/src/main/resources/templates/locatie-list.html
+++ b/src/main/resources/templates/locatie-list.html
@@ -10,7 +10,8 @@
     <div th:replace="fragments/header :: header">
         hier komt de header
     </div>
-    <h2>Netwerkevents</h2>
+    <h2>Locaties</h2>
+    <p class="aantalGevonden" th:text="${nrLocaties}  + ' locaties gevonden'">0 locaties gevonden</p>
 </header>
 
 <main>
