--- a/src/main/resources/templates/netwerkeventsList.html
+++ b/src/main/resources/templates/netwerkeventsList.html
@@ -11,6 +11,7 @@
         hier komt de header
     </div>
     <h2>Netwerkevents</h2>
+    <p class="aantalGevonden" th:text="${nrNetwerkevents}  + ' netwerkevenst gevonden'">0 netwerkevents gevonden</p>
 </header>
 
 <main>
