--- a/src/main/resources/templates/organisatorsList.html
+++ b/src/main/resources/templates/organisatorsList.html
@@ -11,6 +11,7 @@
         hier komt de header
     </div>
     <h2>Organisators</h2>
+    <p class="aantalGevonden" th:text="${nrOrganisators}  + ' organisators gevonden'">0 organisators gevonden</p>
 </header>
 
 <main>
