--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,6 +8,14 @@ html{
     font-size: 18px;
 }
 
+body{
+    margin: auto 0;
+}
+
+main{
+    margin: auto 10px;
+}
+
 a{
     color: #00a9f4;
     text-decoration: none;
@@ -49,18 +57,24 @@ h1, h2, h3, h4{
     color: white;
 }
 
-header > h2{
+header > h1{
     margin-bottom: 0;
+    margin-left: 10px;
+}
+
+header > p{
+    margin-left: 10px;
 }
 
 .netmeetPhoto > img{
+    margin-left: 5px;
     max-height: 75px;
 }
 
 /*footer*/
 footer{
     border-top: 1px solid #29434e;
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -69,6 +83,7 @@ footer{
     display: grid;
     grid-template-areas:
     "filter cards cards cards"
+    "reclame reclame reclame reclame"
     ;
 }
 
@@ -190,6 +205,20 @@ footer{
 
 .moreInfoButton a:hover{
     background-color: #819ca9;
+}
+
+.reclameOrganisator{
+    grid-area: reclame;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-top: 10px;
+    background-color: #29434e;
+    color: white;
+}
+
+.reclameOrganisator > h3{
+    color: white;
+    text-align: center;
 }
 
 /*slide show*/
