--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -7,7 +7,7 @@
 <body>
 
 <div sec:authorize="isAnonymous()" th:fragment="loginMenu">
-    <!--<a class="inlogButton" href="/user/registreer">Registreer</a>-->
+    <a class="inlogButton" href="/user/registreer">Registreer</a>
     <a class="inlogButton" href="/user/login">Inloggen</a>
 </div>
 
