--- a/src/main/resources/templates/user/logout.html
+++ b/src/main/resources/templates/user/logout.html
@@ -12,7 +12,7 @@
     </div>
 </header>
 
-<main>
+<main class="center">
     <form th:action="@{/user/logout}" method="post">
         <h1>Ben je zeker dat je wil uitloggen?</h1>
         <div class="searchButton">
