--- a/src/main/resources/templates/fragments/user.html
+++ b/src/main/resources/templates/fragments/user.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 
-<div sec:authorize="isAnonymous()" th:fragment="loginMenu">
-    <a class="inlogButton" href="/user/registreer">Registreer</a>
-    <a class="inlogButton" href="/user/login">Inloggen</a>
+<div class="inlogButton" sec:authorize="isAnonymous()" th:fragment="loginMenu">
+    <a href="/user/registreer">Registreer</a>
+    <a href="/user/login">Inloggen</a>
 </div>
 
-<div sec:authorize="isAuthenticated()" th:fragment="logoutMenu">
-    <a class="inlogButton" href="/user/logout">Uitloggen</a>
+<div class="inlogButton" sec:authorize="isAuthenticated()" th:fragment="logoutMenu">
+    <a href="/user/logout">Uitloggen</a>
 </div>
 
 </body>
