--- a/src/main/resources/templates/admin/edit-netwerkevent.html
+++ b/src/main/resources/templates/admin/edit-netwerkevent.html
@@ -1,10 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title th:text="${netwerkevent.naamNetwerkEvent}">Netwerkeventdetails</title>
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="/static/css/style.css" />
 </head>
 <body>
+<header>
+    <div th:replace="fragments/header :: header">
+        hier komt de header
+    </div>
+    <h1 th:text="${netwerkevent.naamNetwerkEvent} + ' - ' + ${netwerkevent.datum}"></h1>
+</header>
+
+<main>
+    <table>
+        <tr>
+            <td><p>Info :</p></td>
+            <td><p th:text="${netwerkevent.info}" >Info netwerkevent</p></td>
+        </tr>
+        <tr>
+            <td><p>Organisator :</p></td>
+            <td><a th:text="${netwerkevent.organisator.naam}" th:href="@{|/organisatordetails/${netwerkevent.organisator.id}|}" >Organisator</a></tr>
+        <tr>
+            <td><p>Vakgebied :</p></td>
+            <td><p th:text="${netwerkevent.vakGebied}">Vakgebied</p></td>
+        </tr>
+        <tr>
+            <td><p>Maximum aantal aanwezigen? :</p></td>
+            <td><p th:text="${netwerkevent.locatie.maxAanwezigen}">0</p></td>
+        </tr>
+        <tr>
+            <td><p>Adres :</p></td>
+            <td><a th:text="${netwerkevent.locatie.getAdres()}" th:href="@{|/locatie-details/${netwerkevent.locatie.id}|}">Adres</a></td>
+        </tr>
+        <tr>
+            <td><p>Start uur :</p></td>
+            <td><p th:text="${netwerkevent.startUur}">0u00</p></td>
+        </tr>
+        <tr>
+            <td><p>Duur :</p></td>
+            <td><p th:text="${netwerkevent.duur}">0u00</p></td>
+        </tr>
+    </table>
+</main>
+
+<footer th:replace="fragments/footer :: footer">
+    Hier komt de footer
+</footer>
 
 </body>
+
+<script>
+    function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+            x.className += " responsive";
+        } else {
+            x.className = "topnav";
+        }
+    }
+</script>
+
 </html>
